--- a/medicine-front/package.json
+++ b/medicine-front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "next": "14.2.15",
